# tiny-interjection-model-alpha

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  PUBLISH.md  README.md  TODO.md  pyproject.toml
digital-ocean/: Makefile  README.md  candidate_utils.py  generate_candidates.py  package_hf_dataset.py  quality_candidates.py  validate_candidates.py
digital-ocean/samples/: valid_candidates.jsonl
digital-ocean/traces/: serverless-dataset-manifest.json  serverless-smoke-manifest.json
docs/: artifact-manifest.json  experiment-results.md
nebius/: README.md  job_entrypoint.sh  merge_adapter.py  submit_job.sh  train_qwen_lora.sh
src/interaction_models/: __init__.py  benchmarks.py  cli.py  data.py  eval.py  format.py  inference.py  io.py  parser.py  schema.py  server.py  synthetic.py  train.py  verify.py
tests/: test_artifact_retention.py  test_benchmarks.py  test_data.py  test_do_quality.py  test_eval.py  test_format.py  test_llama_inference.py  test_nebius_job.py  test_parser.py  test_train.py  test_verify.py
